<resources>
    <string name="app_name">BMS Kneeboard and Mission Planner</string>
    <string name="aegean_theater_title">Aegean Theater</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="data_card_size">Data Card Font Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="apply">Apply</string>
    <string name="thanks">
        Thanks to the BenchMark Sims Group for their work on the most accurate, unclassified F-16
        simulator available to the general public, complete with all elements of a dynamic war.
        Please post any suggestions, big or small, to the official forum thread.
    </string>
    <string name="credits">Credits</string>
    <string name="oldgoat5_credits">App by Michael \"OldGoat5\" Evans</string>
    <string name="sir_quacks_credits">
        Launcher icon and testing help by Adam \"Sir_Quacks\" Starkey</string>
    <string name="reddog_credits">
        Korea, Balkans chart information by Oliver \"RedDog\" Beaumont
    </string>
    <string name="neystratiou_credits">
        Aegean charts created by Nikos \"Neystratiou\" Efstratiou
    </string>
    <string name="licensing">Licensing</string>
    <string name="sqlassethelper_used">SQLiteAssetHelper used under Apache 2.0 License</string>
    <string name="math_used">Apache Commons Math3 used under Apache 2.0 License</string>
    <string name="brevity_dictionary_title">Brevity Dictionary</string>
    <string name="fuel_calculator">Bingo Fuel Calculator</string>
    <string name="tacan_ils_checklist">TACAN ILS Checklist</string>
    <string name="steerpoints">Navigation Steerpoints</string>
    <string name="stpts">STPT#</string>
    <string name="usage">Usage</string>
    <string name="stpt_1_24">1&#8211;24</string>
    <string name="usage_1_24">Navigation flight plan</string>
    <string name="stpt_25">25</string>
    <string name="usage_25">Campaign Bullseye</string>
    <string name="stpt_26_30">26&#8211;30</string>
    <string name="usage_26_30">Ownership MARK points</string>
    <string name="stpt_31_50">31&#8211;50</string>
    <string name="usage_31_50">HSD LINES</string>
    <string name="stpt_51_55">51&#8211;55</string>
    <string name="usage_51_55">Open</string>
    <string name="stpt_56_70">56&#8211;70</string>
    <string name="usage_56_70">Preplanned threats</string>
    <string name="stpt_71_80">71&#8211;80</string>
    <string name="usage_71_80">Flexible Datalink steerpoints</string>
    <string name="stpt_81_99">81&#8211;99</string>
    <string name="usage_81_99">Open</string>
    <string name="default_frequencies">Default Frequencies</string>
    <string name="weight">Weight: </string>
    <string name="drag">Drag: </string>
    <string name="range">Range: </string>
    <string name="blast_radius">Blast Radius: </string>
    <string name="damage">Damage: </string>
    <string name="guidance">Guidance: </string>
    <string name="release_brevity">Release Brevity: </string>
    <string name="type">Type: </string>
    <string name="maxtof">Max Time of Flight: </string>
    <string name="min_eng_range">Min Eng Range: </string>
    <string name="min_eng_alt">Min Eng Alt: </string>
    <string name="max_eng_alt">Max Eng Alt: </string>
    <string name="firecontrol">Fire Control: </string>
    <string name="select_bomb_type">Select Bomb Type:</string>
    <string name="select_bomb_id">Select Bomb:</string>
    <string name="select">Select</string>
    <string name="view_bomb_info">View Bomb Info</string>
</resources>