<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/threat_dialog"
              android:padding="5dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/maxtof"
        android:textColor="@color/black"
        android:id="@+id/threat_maxtof_dialog_text_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:id="@+id/threat_weight_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/range"
        android:textColor="@color/black"
        android:id="@+id/threat_range_km_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/min_eng_range"
        android:textColor="@color/black"
        android:id="@+id/threat_min_eng_range_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/min_eng_alt"
        android:textColor="@color/black"
        android:id="@+id/threat_min_eng_alt_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/max_eng_alt"
        android:textColor="@color/black"
        android:id="@+id/threat_max_alt_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guidance"
        android:textColor="@color/black"
        android:id="@+id/threat_guidance_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firecontrol"
        android:textColor="@color/black"
        android:id="@+id/threat_firecontrol_dialog_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/type"
        android:textColor="@color/black"
        android:id="@+id/threat_type_dialog_text_view"/>

</LinearLayout>